Improved the user interface

--- a/StoreKitTest/SubscriptionConfig_en.json
+++ b/StoreKitTest/SubscriptionConfig_en.json
@@ -1,5 +1,5 @@
 {
-  "title": "Welcome to StoreKitTest",
+  "title": "StoreKitManager",
   "subtitle": "Choose a subscription",
   "trialText": "First month free",
   "featureSections": [
